[tool.poetry]
name = "pulse-delivery"
version = "0.1.0"
description = ""
authors = ["you@example.com"]
packages = [{include = "bot"}]

[tool.poetry.dependencies]
python = "3.11"
aiogram = "2.25.1"
python-dotenv = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
